refresh faces
handle non-ml faces
